home page changed

--- a/index.html
+++ b/index.html
@@ -168,10 +168,10 @@
             <article class="col-lg-12">
              <h2 class="text-center">Rachael Dyer, Tutor In Leicester</h2>
              <div class="seperator"></div>
-            <p>My name is Rachael Dyer. I have been a teacher for over 20 years and teach GCSE Maths, English, SATS, 11+ and many other subjects. I have a lot of experience with children with special needs and those struggling within the school environment. Through my years of experience I know how to get the best out of your child and realise their true potential.</p>
+            <p>My name is Rachael Dyer. I have been a teacher for over 20 years and teach GCSE Maths, English, SATS, 11+ and many other subjects. I have a lot of experience teaching children with special needs and those struggling within the school environment. Through my years of experience, I know how to get the best out of your child and realise their true potential.</p>
 <p>Tutoring is not just about knowledge of a subject. It&#39;s also about how to make it engaging and relevant to a child. It&#39;s about making study enjoyable and not a chore. It&#39;s about looking at the subject from the child&#39;s point of view.</p>
-<p>I know that I am doing my job right if the child looks forward to my tutor sessions as well as making measurable progress in there chosen subject. The two go hand in hand.</p>
-<p>When you hire me you know you are getting a true education professional that will make a significant difference in your child&#39;s educational journey.</p>
+<p>I know that I am doing my job right if the child looks forward to my tutor sessions as well as making measurable progress in their chosen subject. The two go hand in hand.</p>
+<p>When you hire me you know you are getting a true education professional. One that will make a significant difference in your child&#39;s educational journey.</p>
              <div class="img-wrapper">
                 <img src="/img/tutor-journey.png" alt="Tutor Journey">              
              </div>
@@ -179,62 +179,22 @@
             </article>
         </div>
       </div>
-    </section>     <!-- Testimonials -->
-    <section class="feature home-testimonial text-center bg-light">
-      <div class="container">
-        <h2>What clients are saying...</h2>
-        <div class="seperator"></div>
-        <div class="row">
-          <div class="col-lg-6">
-              <h5>Dee P.</h5>
-              <p class="font-weight-light">"This is my second lesson with Rachael. She is very professional and organised. In the hour she’s here they get a lot done."</p>
-          </div>
-          <div class="col-lg-6">
-  
-              <h5>Madison J.</h5>
-              <p class="font-weight-light">"Great tutor committed to my daughter and able to manage her complex needs using different techniques and humour. My daughter can be difficult to engage/encourage and has low self-esteem, with Rachael’s support she is learning and her confidence is growing and showing through already."</p>
-          </div>
-        </div>
-      </div>
     </section>    <section class="feature advantages bg-dark text-center">  
       <div class="section-overlay"></div>
       <div class="container">
         <div class="row">
             <div class="col-lg-12">
-             <h2>Key Advantages With Me</h2>
+             <h2>What Clients Are Saying...</h2>
              <div class="seperator"></div>
-                <div class="row">
-                <div class="col-lg-3 icon-item">
-                    <div class="icon-box">
-                    <img src="/img/sketch-tick1-blue.png">
-                    </div>
-                    <div class="icon-box-content">
-                        20+ Years Experience
-                    </div>                
+                <div class="row">     
+                <div class="col-lg-6">
+                    <h5>Dee P.</h5>
+                    <p class="font-weight-light">"This is my second lesson with Rachael. She is very professional and organised. In the hour she’s here they get a lot done."</p>
+                                  
                 </div>
-                <div class="col-lg-3 icon-item">
-                    <div class="icon-box">
-                    <img src="/img/sketch-tick1-blue.png">
-                    </div>
-                    <div class="icon-box-content">
-                        Free Initial Meeting
-                    </div>                
-                </div>
-                <div class="col-lg-3 icon-item">
-                    <div class="icon-box">
-                    <img src="/img/sketch-tick1-blue.png">
-                    </div>
-                    <div class="icon-box-content">
-                        Student Centred Approach
-                    </div>                
-                </div>
-                <div class="col-lg-3 icon-item">
-                    <div class="icon-box">
-                    <img src="/img/sketch-tick1-blue.png">
-                    </div>
-                    <div class="icon-box-content">
-                        Availability
-                    </div>                
+                <div class="col-lg-6">
+                    <h5>Madison J.</h5>
+                    <p class="font-weight-light">"Great tutor committed to my daughter and able to manage her complex needs using different techniques and humour. My daughter can be difficult to engage/encourage and has low self-esteem, with Rachael’s support she is learning and her confidence is growing and showing through already."</p>         
                 </div>
                 </div>
             </div>
