--- a/contact/index.html
+++ b/contact/index.html
@@ -47,6 +47,7 @@
     <link href="/vendor/simple-line-icons/css/simple-line-icons.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Lato:300,300i,400,400i,700,700i" rel="stylesheet">
     <link href="/css/styles.css" rel="stylesheet">
+    <link href="/css/request-form.css" rel="stylesheet">
     <link href="/css/social-media.css" rel="stylesheet">
 
 <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
@@ -156,7 +157,7 @@
                         <a class="nav-link" href="/">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/request-tutor/">Request Tutor</a>
+                        <a class="nav-link" href="/request-tutor/"  data-toggle="modal" data-target="#contactForm">Request Tutor</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/about/">About</a>
@@ -328,158 +329,56 @@
             Copyright © Tutor Interventions 2018| <a href="/terms-and-conditions/">Terms and Conditions</a> | <a href="/privacy-policy/">Privacy</a>
         </div>
       </div>
-    </footer>    <div class="request-popup hidden">
-                  <div class="container narrow-form">
-            <div class="row">
-                <div class="col-xl-12">
-               
-                <form name="sentMessage" id="contactForm" novalidate>
-                <div class="form-header">
-                    <h3>Request Tutor</h3><i class="fa fa-times"></i>              
-                </div>
-                <div style="clear:both;"></div>
-                 <span>Give us an idea of what you are looking for and we will get back to you very shortly</span>
-
-                <div class="form-row">
-                    <div class="col">
-                        <div class="control-group">
-                            <div class="form-group floating-label-form-group controls">
-                                <label>School subjects your want your tutor to cover</label>
-                                <input type="text" class="form-control" placeholder="School Subjects" id="subjects" required data-validation-required-message="Please enter the student's school subjects.">
-                                <p class="help-block text-danger"></p>
-                            </div>
-                        </div>
-                     </div>
-                    <div class="col">
-                        <div class="control-group">
-                            <div class="form-group floating-label-form-group controls">
-                                <label>Your Town or Postcode</label>
-                                <input type="text" class="form-control" placeholder="Town or Postcode" id="location"  required data-validation-required-message="Please enter your town or postcode.">
-                                <p class="help-block text-danger"></p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="form-row">
-                    <div class="col">
-                        <div class="control-group group-outline">
-                            <label class="group-label">How many lessons are you looking for?</label>
-                            <div class="form-group controls">
-                                <div class="form-check form-check-inline">
-                                    <label class="form-check-label" for="one-off">One Off</label>
-                                    <input type="radio" name="frequency" class="form-control form-check-input" id="one-off" value="one off">
-                                    <p class="help-block text-danger"></p>
-                                </div>
-                                <div class="form-check form-check-inline">
-                                    <label class="form-check-label" for="regular">Regular</label>
-                                    <input type="radio" name="frequency" class="form-control form-check-input" id="regular" value="regular">
-                                    <p class="help-block text-danger"></p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col">
-                        <div class="control-group group-outline">
-                            <label class="group-label">Online tutoring or at your home</label>
-                            <div class="form-group controls">
-                                <div class="form-check form-check-inline">
-                                    <label class="form-check-label" for="online">Online</label>
-                                    <input type="radio" name="delivery" class="form-control form-check-input" id="online" value="online">
-                                    <p class="help-block text-danger"></p>
-                                </div>
-                                <div class="form-check form-check-inline">
-                                    <label class="form-check-label" for="home">At my home</label>
-                                    <input type="radio" name="delivery" class="form-control form-check-input" id="home" value="home">
-                                    <p class="help-block text-danger"></p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="form-row">
-                    <div class="col">
-                        <div class="control-group">
-                            <div class="form-group controls">
-                                <label>Extra Details</label>
-                                <textarea rows="5" class="form-control" 
-                                placeholder="Things you might want to include here are:
-                                The age of the student and their level or learning?
-                                Are you engaging a tutor for specific exams or for specific learning needs?
-                                Times and dates you would like to engage a tutor." id="message" required data-validation-required-message="Please enter a message."></textarea>
-                                <p class="help-block text-danger"></p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="form-row">
-                    <div class="col">
-                        <div class="control-group">
-                            <div class="form-group floating-label-form-group controls">
-                                <label>First Name</label>
-                                <input type="text" class="form-control" placeholder="First Name" id="first-name" required data-validation-required-message="Please enter your first name.">
-                                <p class="help-block text-danger"></p>
-                            </div>
-                        </div>
-                     </div>
-                    <div class="col">
-                        <div class="control-group">
-                            <div class="form-group floating-label-form-group controls">
-                                <label>Last Name</label>
-                                <input type="text" class="form-control" placeholder="Last Name" id="last-name" required data-validation-required-message="Please enter your last name.">
-                                <p class="help-block text-danger"></p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="form-row">
-                    <div class="col">
-                        <div class="control-group">
-                            <div class="form-group floating-label-form-group controls">
-                                <label>Phone Number</label>
-                                <input type="tel" class="form-control" placeholder="Phone Number" id="phone">
-                                 <p class="help-block text-danger"></p>
-                            </div>
-                        </div>
-                     </div>
-                    <div class="col">
-                        <div class="control-group">
-                            <div class="form-group floating-label-form-group controls">
-                                <label>Email Address</label>
-                                <input type="email" class="form-control" placeholder="Email Address" id="email" required data-validation-required-message="Please enter your email address.">
-                                <p class="help-block text-danger"></p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                <br>
-                
-                <div class="form-row">
-                    <div class="col">
-                        <div id="success">
-                        </div>
-                        <div class="form-group feature">
-                            <button type="submit" class="btn btn-primary btn-blue" id="sendMessageButton">Send
-                                <span class="arrow">&gt;</span>
-                            </button>
-                        </div>
-                    </div>
-                </div>
-            </form>
-                </div>
+    </footer>   
+    <!-- Modal -->
+<div id="contactForm" class="modal fade" role="dialog">
+    <div class="modal-dialog">
+        <!-- Modal content-->
+        <div class="modal-content">
+            <div class="modal-header">
+                <h4 class="modal-title">
+                    Request Rachael As A Tutor
+                </h4>
+                <button type="button" class="close" data-dismiss="modal"><i class="fa fa-times"></i> </button>
             </div>
-        </div> 
+            <div class="modal-body">
+                <form role="form" method="post" id="request-tutor" >
+                    <p>Give me a brief idea of what you are looking for and I will get back to you very shortly</p>
+                        <div class="form-group">
+                            <label for="name"> Name:</label>
+                            <input type="text" class="form-control" id="name" name="name" required maxlength="50">
+                        </div>
+                        <div class="form-group">
+                            <label for="email"> Email:</label>
+                            <input type="email" class="form-control" id="email" name="email" required maxlength="50">
+                        </div>
+                        <div class="form-group">
+                            <label for="phone">Phone :</label>
+                            <input type="phone" class="form-control" id="phone" name="phone" required maxlength="50">
+                        </div>
+                        <div class="form-group">
+                            <label for="name"> Message:</label>
+                            <textarea class="form-control" type="textarea" name="message" id="message" placeholder="Things you might want to include here are:
+                                    The age of the student and their level or learning?
+                                    Are you engaging a tutor for specific exams or for specific learning needs?
+                                    Times and dates you would like to engage a tutor." maxlength="6000" rows="5"></textarea>
+                        </div>
+                    <button type="submit" class="btn btn-lg btn-success btn-block" id="btnContactUs">Send Request &rarr;</button>
+                </form>
+                <div id="success_message" style="width:100%; height:100%; display:none; "> <h3>Sent your message successfully!</h3> </div>
+                <div id="error_message" style="width:100%; height:100%; display:none; "> <h3>Error</h3> Sorry there was an error sending your form. </div>
+            </div>
+        </div>
     </div>
+</div> 
+  
 
 
 
     <script src="/vendor/jquery/jquery.min.js"></script>
     <script src="/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
     <script src="/js/jqBootstrapValidation.js"></script>
-    <script src="/js/tutor_me.js"></script>
+    <script src="/js/request-form.js"></script>
     <script src="/js/main.js"></script>
                         <script src="/js/jqBootstrapValidation.js"></script>
                     <script src="/js/contact_me.js"></script>
