--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
     <meta name="keywords" content="private tutor,private tutoring,gcse maths tutor,gcse english tutor,Rachael Dyer,teaching,teacher,tutoring,tutor,education,schools,schooling,11+,special needs">
     <meta name="author" content="Rachael Dyer">
     <meta property="og:type"   content="website" /> 
-    <meta property="og:title" content="Leicester Tutor, Rachael Dyer, With 20 Years Teaching Experience">
+    <meta property="og:title" content="Leicester Tutor With 20 Years Teaching Experience - GCSE Maths, English. Special Needs.">
     <meta property="og:description" content="Leicester tutor with 20 years teaching experience">
     <meta property="og:image" content="https://www.tutorinterventions.co.uk/img/classmates-handsup-header.jpg">
     <meta property="og:url" content="https://www.tutorinterventions.co.uk/">
 
     <meta property="twitter:card" content="summary">
-    <meta property="twitter:title" content="Leicester Tutor, Rachael Dyer, With 20 Years Teaching Experience">
+    <meta property="twitter:title" content="Leicester Tutor With 20 Years Teaching Experience - GCSE Maths, English. Special Needs.">
     <meta property="twitter:description" content="Leicester tutor with 20 years teaching experience">
     <meta property="twitter:image" content="https://www.tutorinterventions.co.uk/img/classmates-handsup-header.jpg">
         <meta property="twitter:image:alt" content="Classmates handsup header">
@@ -38,7 +38,7 @@
     <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
 
-    <title>Leicester Tutor, Rachael Dyer, With 20 Years Teaching Experience | Tutor Interventions</title>
+    <title>Leicester Tutor With 20 Years Teaching Experience - GCSE Maths, English. Special Needs. | Tutor Interventions</title>
     <!-- Bootstrap core CSS -->
     <link href="/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
@@ -148,7 +148,7 @@
       <div class="container">
         <div class="row">
           <div class="col-xl-12 mx-auto">
-            <h1>Leicester Tutor, Rachael Dyer, With 20 Years Teaching Experience</h1>
+            <h1>Leicester Tutor, Rachael Dyer, With 20 Years Teaching Experience.</h1>
             <div class="intro-para">
               Looking for a local private tutor in Leicester for GCSE Maths, English, SATS, 11+ or other subjects? Need a tutor with genuine teaching qualifications and experience? Do you have a child with special needs?            <div class="contact-me">
             <div><span>Call me, Rachael, on </span><a href="tel:0756 358 2702">0756 358 2702</a></div>
@@ -350,7 +350,7 @@
 <div id="contactForm" class="modal fade" role="dialog">
     <div class="modal-dialog">
         <!-- Modal content-->
-        <div class="modal-content">
+        <div class="modal-content bg-light">
             <div class="modal-header">
                 <h4 class="modal-title">
                     Request Rachael As A Tutor
@@ -359,30 +359,38 @@
             </div>
             <div class="modal-body">
                 <form role="form" method="post" id="request-tutor" >
-                    <p>Give me a brief idea of what you are looking for and I will get back to you very shortly</p>
+                    <p>Give me a brief idea of what you are looking for and I will get back to you very shortly. Hopefully later today.</p>
                         <div class="form-group">
                             <label for="name"> Name:</label>
-                            <input type="text" class="form-control" id="name" name="name" required maxlength="50">
+                            <input type="text" class="form-control" id="Name" name="Name" required maxlength="50">
                         </div>
                         <div class="form-group">
                             <label for="email"> Email:</label>
-                            <input type="email" class="form-control" id="email" name="email" required maxlength="50">
+                            <input type="email" class="form-control" id="Email" name="Email" required maxlength="50">
                         </div>
                         <div class="form-group">
                             <label for="phone">Phone :</label>
-                            <input type="phone" class="form-control" id="phone" name="phone" required maxlength="50">
+                            <input type="phone" class="form-control" id="Phone" name="Phone" required maxlength="50">
                         </div>
                         <div class="form-group">
-                            <label for="name"> Message:</label>
-                            <textarea class="form-control" type="textarea" name="message" id="message" placeholder="Things you might want to include here are:
+                            <label for="name"> Details:</label>
+                            <textarea class="form-control" type="textarea" name="Details" id="Details" 
+                            placeholder="Things you might want to include here are:
                                     The age of the student and their level or learning?
                                     Are you engaging a tutor for specific exams or for specific learning needs?
                                     Times and dates you would like to engage a tutor." maxlength="6000" rows="5"></textarea>
                         </div>
-                    <button type="submit" class="btn btn-lg btn-success btn-block" id="btnContactUs">Send Request &rarr;</button>
+                        <input type="hidden" id="Title" name="Title">
+                    <button type="submit" class="btn btn-lg btn-primary btn-blue" id="btnContactUs">Send Request &rarr;</button>
                 </form>
-                <div id="success_message" style="width:100%; height:100%; display:none; "> <h3>Sent your message successfully!</h3> </div>
-                <div id="error_message" style="width:100%; height:100%; display:none; "> <h3>Error</h3> Sorry there was an error sending your form. </div>
+                    <div id="success_message" class="alert alert-success" style="display:none;" role="alert"> 
+                        <h3 class="alert-heading">Sent your message successfully!</h3> 
+                        I should get back to you very soon. Hopefully today.
+                    </div>
+                  <div id="error_message" class="alert alert-danger" style="display:none;" role="alert">
+                    <h3 class="alert-heading">Apologies, there Was An Error Sending Your Message.</h3> 
+                        This is a technical problem on our side. You can email me at: rachael@tutorinterventions.co.uk or try again later on.
+                  </div>
             </div>
         </div>
     </div>
