Phone number optional

--- a/privacy-policy/index.html
+++ b/privacy-policy/index.html
@@ -267,8 +267,8 @@ We will not sell, distribute or lease your personal information to third parties
                             <input type="email" class="form-control" id="Email" name="Email" required maxlength="50">
                         </div>
                         <div class="form-group">
-                            <label for="phone">Phone :</label>
-                            <input type="phone" class="form-control" id="Phone" name="Phone" required maxlength="50">
+                            <label for="phone">Phone (optional) :</label>
+                            <input type="phone" class="form-control" id="Phone" name="Phone" maxlength="50">
                         </div>
                         <div class="form-group">
                             <label for="name"> Details:</label>
