update home page description

--- a/index.html
+++ b/index.html
@@ -4,18 +4,18 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Leicester tutor with 20 years teaching experience">
+    <meta name="description" content="Looking for a local private tutor in Leicester for GCSE Maths, English, SATS, 11+ or other subjects? Need a tutor with genuine teaching qualifications and experience? Do you have a child with special needs?">
     <meta name="keywords" content="private tutor,private tutoring,gcse maths tutor,gcse english tutor,Rachael Dyer,teaching,teacher,tutoring,tutor,education,schools,schooling,11+,special needs">
     <meta name="author" content="Rachael Dyer">
     <meta property="og:type"   content="website" /> 
     <meta property="og:title" content="Leicester Tutor With 20 Years Teaching Experience - GCSE Maths, English. Special Needs.">
-    <meta property="og:description" content="Leicester tutor with 20 years teaching experience">
+    <meta property="og:description" content="Looking for a local private tutor in Leicester for GCSE Maths, English, SATS, 11+ or other subjects? Need a tutor with genuine teaching qualifications and experience? Do you have a child with special needs?">
     <meta property="og:image" content="https://www.tutorinterventions.co.uk/img/classmates-handsup-header.jpg">
     <meta property="og:url" content="https://www.tutorinterventions.co.uk/">
 
     <meta property="twitter:card" content="summary">
     <meta property="twitter:title" content="Leicester Tutor With 20 Years Teaching Experience - GCSE Maths, English. Special Needs.">
-    <meta property="twitter:description" content="Leicester tutor with 20 years teaching experience">
+    <meta property="twitter:description" content="Looking for a local private tutor in Leicester for GCSE Maths, English, SATS, 11+ or other subjects? Need a tutor with genuine teaching qualifications and experience? Do you have a child with special needs?">
     <meta property="twitter:image" content="https://www.tutorinterventions.co.uk/img/classmates-handsup-header.jpg">
         <meta property="twitter:image:alt" content="Classmates handsup header">
           
@@ -429,7 +429,7 @@
      class="fa fa-facebook" title="Share on Facebook">   
     </a>
     <a href="javascript:void(0)" 
-    onClick="window.open('https://twitter.com/intent/tweet?text=Leicester%20tutor%20with%2020%20years%20teaching%20experience&#38;url=https%3A%2F%2Fwww.tutorinterventions.co.uk%2F', 'twitter-share', 'width=550,height=235');return false;" 
+    onClick="window.open('https://twitter.com/intent/tweet?text=Looking%20for%20a%20local%20private%20tutor%20in%20Leicester%20for%20GCSE%20Maths%2C%20English%2C%20SATS%2C%2011%2B%20or%20other%20subjects%3F%20Need%20a%20tutor%20with%20genuine%20teaching%20qualifications%20and%20experience%3F%20Do%20you%20have%20a%20child%20with%20special%20needs%3F&#38;url=https%3A%2F%2Fwww.tutorinterventions.co.uk%2F', 'twitter-share', 'width=550,height=235');return false;" 
      class="fa fa-twitter"  title="Share on Twitter">   
     </a>
     <a href="javascript:void(0)" 
