Update to home page description

--- a/index.html
+++ b/index.html
@@ -4,18 +4,18 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Looking for a local private tutor in Leicester for GCSE Maths, English, SATS, 11+ or other subjects? Need a tutor with genuine teaching qualifications and experience? Do you have a child with special needs?">
+    <meta name="description" content="Top Leicester based private tutor. Teacher for over 20 years in GCSE Maths, English, SATS, 11+. Experienced with those struggling in the school environment.">
     <meta name="keywords" content="private tutor,private tutoring,gcse maths tutor,gcse english tutor,Rachael Dyer,teaching,teacher,tutoring,tutor,education,schools,schooling,11+,special needs">
     <meta name="author" content="Rachael Dyer">
     <meta property="og:type"   content="website" /> 
     <meta property="og:title" content="Leicester Tutor With 20 Years Teaching Experience - GCSE Maths, English. Special Needs.">
-    <meta property="og:description" content="Looking for a local private tutor in Leicester for GCSE Maths, English, SATS, 11+ or other subjects? Need a tutor with genuine teaching qualifications and experience? Do you have a child with special needs?">
+    <meta property="og:description" content="Top Leicester based private tutor. Teacher for over 20 years in GCSE Maths, English, SATS, 11+. Experienced with those struggling in the school environment.">
     <meta property="og:image" content="https://www.tutorinterventions.co.uk/img/classmates-handsup-header.jpg">
     <meta property="og:url" content="https://www.tutorinterventions.co.uk/">
 
     <meta property="twitter:card" content="summary">
     <meta property="twitter:title" content="Leicester Tutor With 20 Years Teaching Experience - GCSE Maths, English. Special Needs.">
-    <meta property="twitter:description" content="Looking for a local private tutor in Leicester for GCSE Maths, English, SATS, 11+ or other subjects? Need a tutor with genuine teaching qualifications and experience? Do you have a child with special needs?">
+    <meta property="twitter:description" content="Top Leicester based private tutor. Teacher for over 20 years in GCSE Maths, English, SATS, 11+. Experienced with those struggling in the school environment.">
     <meta property="twitter:image" content="https://www.tutorinterventions.co.uk/img/classmates-handsup-header.jpg">
         <meta property="twitter:image:alt" content="Classmates handsup header">
           
@@ -169,7 +169,7 @@
             <article class="col-lg-12">
              <h2 class="text-center">Rachael Dyer, Tutor In Leicester</h2>
              <div class="seperator"></div>
-            <p>My name is Rachael Dyer. I have been a teacher for over 20 years and teach GCSE Maths, English, SATS, 11+ and many other subjects. I have a lot of experience teaching children with special needs and those struggling within the school environment. Through my years of experience, I know how to get the best out of your child and realise their true potential.</p>
+            <p>My name is Rachael Dyer. I am a Leicester based private tutor and have been a teaching for over 20 years. I tutor GCSE Maths, English, SATS, 11+ and many other subjects. I also  have a lot of experience teaching children with special needs and those struggling within the school environment. Through my years of experience, I know how to get the best out of your child and realise their true potential.</p>
 <p>Tutoring is not just about knowledge of a subject. It&#39;s also about how to make it engaging and relevant to a child. It&#39;s about making study enjoyable and not a chore. It&#39;s about looking at the subject from the child&#39;s point of view.</p>
 <p>I know that I am doing my job right if the child looks forward to my tutor sessions as well as making measurable progress in their chosen subject. The two go hand in hand.</p>
 <p>When you hire me you know you are getting a true education professional. One that will make a significant difference in your child&#39;s educational journey.</p>
@@ -429,7 +429,7 @@
      class="fa fa-facebook" title="Share on Facebook">   
     </a>
     <a href="javascript:void(0)" 
-    onClick="window.open('https://twitter.com/intent/tweet?text=Looking%20for%20a%20local%20private%20tutor%20in%20Leicester%20for%20GCSE%20Maths%2C%20English%2C%20SATS%2C%2011%2B%20or%20other%20subjects%3F%20Need%20a%20tutor%20with%20genuine%20teaching%20qualifications%20and%20experience%3F%20Do%20you%20have%20a%20child%20with%20special%20needs%3F&#38;url=https%3A%2F%2Fwww.tutorinterventions.co.uk%2F', 'twitter-share', 'width=550,height=235');return false;" 
+    onClick="window.open('https://twitter.com/intent/tweet?text=Top%20Leicester%20based%20private%20tutor.%20Teacher%20for%20over%2020%20years%20in%20GCSE%20Maths%2C%20English%2C%20SATS%2C%2011%2B.%20Experienced%20with%20those%20struggling%20in%20the%20school%20environment.&#38;url=https%3A%2F%2Fwww.tutorinterventions.co.uk%2F', 'twitter-share', 'width=550,height=235');return false;" 
      class="fa fa-twitter"  title="Share on Twitter">   
     </a>
     <a href="javascript:void(0)" 
