--- a/index.html
+++ b/index.html
@@ -66,8 +66,6 @@
   gtag('config', 'UA-123302569-1');
 </script>
 
-
-
 <script>
   (function() {
     var cx = '013979487175649159810:5dmpygjru_a';
@@ -169,7 +167,7 @@
             <article class="col-lg-12">
              <h2 class="text-center">Rachael Dyer, Tutor In Leicester</h2>
              <div class="seperator"></div>
-            <p>My name is Rachael Dyer. I am a Leicester based private tutor and have been a teaching for over 20 years. I tutor GCSE Maths, English, SATS, 11+ and many other subjects. I also  have a lot of experience teaching children with special needs and those struggling within the school environment. Through my years of experience, I know how to get the best out of your child and realise their true potential.</p>
+            <p>My name is Rachael Dyer. I am a Leicester based private tutor and have been teaching for over 20 years. I tutor GCSE Maths, English, SATS, 11+ and many other subjects. I also  have a lot of experience teaching children with special needs and those struggling within the school environment. Through my years of experience, I know how to get the best out of your child and realise their true potential.</p>
 <p>Tutoring is not just about knowledge of a subject. It&#39;s also about how to make it engaging and relevant to a child. It&#39;s about making study enjoyable and not a chore. It&#39;s about looking at the subject from the child&#39;s point of view.</p>
 <p>I know that I am doing my job right if the child looks forward to my tutor sessions as well as making measurable progress in their chosen subject. The two go hand in hand.</p>
 <p>When you hire me you know you are getting a true education professional. One that will make a significant difference in your child&#39;s educational journey.</p>
@@ -342,7 +340,7 @@
             </div>
         </div>
         <div class="bottom">
-            Copyright © Tutor Interventions 2018| <a href="/terms-and-conditions/">Terms and Conditions</a> | <a href="/privacy-policy/">Privacy</a>
+            Copyright © Tutor Interventions 2019| <a href="/terms-and-conditions/">Terms and Conditions</a> | <a href="/privacy-policy/">Privacy</a>
         </div>
       </div>
     </footer>   
