--- a/contact/index.html
+++ b/contact/index.html
@@ -49,7 +49,8 @@
     <link href="/css/styles.css" rel="stylesheet">
     <link href="/css/request-form.css" rel="stylesheet">
     <link href="/css/social-media.css" rel="stylesheet">
-
+     <link href="https://unpkg.com/leaflet@1.4.0/dist/leaflet.css" rel="stylesheet">
+ 
 <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
 <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
 <!--[if lt IE 9]>
@@ -159,13 +160,7 @@
     </header>
         <div class="map-container">
         <div id="map" class="map" >
-            <iframe width="100%" height="100%" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" 
-src="https://www.openstreetmap.org/export/embed.html?bbox=-1.2860870361328127%2C52.60158792933864%2C-1.0231018066406252%2C52.720490172853076&amp;layer=mapnik&amp;marker=52.661079482306896%2C-1.1545944213867188" 
-style="">
-</iframe><br/>
-<small>
-<a href="https://www.openstreetmap.org/?mlat=52.6611&amp;mlon=-1.1546#map=12/52.6611/-1.1546">View Larger Map</a>
-</small>           
+         
         </div>
          
         <div class="map-contact">
@@ -363,7 +358,8 @@ style="">
     <script src="/js/jqBootstrapValidation.js"></script>
     <script src="/js/request-form.js"></script>
     <script src="/js/main.js"></script>
-                        <script src="/js/jqBootstrapValidation.js"></script>
+                        <script src="https://unpkg.com/leaflet@1.4.0/dist/leaflet.js"></script>
+                    <script src="/js/jqBootstrapValidation.js"></script>
                     <script src="/js/contact_me.js"></script>
              <link rel="stylesheet" type="text/css" href="//cdnjs.cloudflare.com/ajax/libs/cookieconsent2/3.0.3/cookieconsent.min.css" />
     <script src="//cdnjs.cloudflare.com/ajax/libs/cookieconsent2/3.0.3/cookieconsent.min.js"></script>
