Added testimonials slider

--- a/index.html
+++ b/index.html
@@ -49,6 +49,8 @@
     <link href="/css/styles.css" rel="stylesheet">
     <link href="/css/request-form.css" rel="stylesheet">
     <link href="/css/social-media.css" rel="stylesheet">
+    <link href="/css/slick.css" rel="stylesheet">
+    <link href="/css/slick-theme.css" rel="stylesheet">
 
 <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
 <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -185,17 +187,29 @@
             <div class="col-lg-12">
              <h2>What Clients Are Saying...</h2>
              <div class="seperator"></div>
-                <div class="row">     
-                <div class="col-lg-6">
-                    <h5>Dee P.</h5>
-                    <p class="font-weight-light">"This is my second lesson with Rachael. She is very professional and organised. In the hour she’s here they get a lot done."</p>
-                                  
-                </div>
-                <div class="col-lg-6">
-                    <h5>Madison J.</h5>
-                    <p class="font-weight-light">"Great tutor committed to my daughter and able to manage her complex needs using different techniques and humour. My daughter can be difficult to engage/encourage and has low self-esteem, with Rachael’s support she is learning and her confidence is growing and showing through already."</p>         
-                </div>
-                </div>
+                <div class="row testimonials-wrapper fh">     
+                                                            <div class="col-lg-12">
+                        <h5>Arjun P</h5>
+                        <p>I would like to send a massive thank you to Rachael for teaching me how to answer key questions and what to understand and interpret from them. I used to struggle with English a lot, but thanks to Rachael’s help I’ve never felt more confident to answer any exam questions they throw at me. She teaches you in a way that you will always remembers and does not stop until you have fully understood it. </p>
+                    </div>
+                                        <div class="col-lg-12">
+                        <h5>Dee P</h5>
+                        <p>This is my second lesson with Rachael. She is very professional and organised. In the hour she’s here they get a lot done. My son is also very happy being tutored by Rachael.</p>
+                    </div>
+                                        <div class="col-lg-12">
+                        <h5>Elagiya S</h5>
+                        <p>Rachael is an amazing tutor who cares about her students&#39; progression. She spends her time finding extra resources and emails them,  which I found really helpful. Her technique of teaching is outstanding as it&#39;s easy to understand, she also takes her time explaining in detail things which I do not understand. Her way of teaching has made me improve and has led me to do well on my GCSEs. </p>
+                    </div>
+                                        <div class="col-lg-12">
+                        <h5>Madison J</h5>
+                        <p>Great tutor committed to my daughter and able to manage her complex needs using different techniques and humour.
+My daughter can be difficult to engage/encourage and has low self-esteem, with Rachael’s support she is learning and her confidence is growing and showing through already.</p>
+                    </div>
+                                        <div class="col-lg-12">
+                        <h5>Ysolina A</h5>
+                        <p>Thank you so much for all your help and support with my son&#39;s preparation for the GCSE English Language and Literature. Your patience (with both of us!), flexibility, teaching style and subject knowledge were second to none. Despite all the challenges (and there were a few!) so much progress was made and my son again feels confident in his abilities once again. Thank you so much! </p>
+                    </div>
+                                    </div>
             </div>
 
         </div>
@@ -401,7 +415,9 @@
     <script src="/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
     <script src="/js/jqBootstrapValidation.js"></script>
     <script src="/js/request-form.js"></script>
+    <script src="/js/slick.js"></script>
     <script src="/js/main.js"></script>
+
                  <link rel="stylesheet" type="text/css" href="//cdnjs.cloudflare.com/ajax/libs/cookieconsent2/3.0.3/cookieconsent.min.css" />
     <script src="//cdnjs.cloudflare.com/ajax/libs/cookieconsent2/3.0.3/cookieconsent.min.js"></script>
     <script>
@@ -420,7 +436,8 @@
     }
     })});
     </script>
-    <div class="social-media">
+    
+<div class="social-media">
 <div class="sm-container">
     <a href="javascript:void(0)" 
     onClick="window.open('https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fwww.tutorinterventions.co.uk%2F', 'facebook-share', 'width=580,height=296');return false;"
@@ -429,10 +446,6 @@
     <a href="javascript:void(0)" 
     onClick="window.open('https://twitter.com/intent/tweet?text=Top%20Leicester%20based%20private%20tutor.%20Teacher%20for%20over%2020%20years%20in%20GCSE%20Maths%2C%20English%2C%20SATS%2C%2011%2B.%20Experienced%20with%20those%20struggling%20in%20the%20school%20environment.&#38;url=https%3A%2F%2Fwww.tutorinterventions.co.uk%2F', 'twitter-share', 'width=550,height=235');return false;" 
      class="fa fa-twitter"  title="Share on Twitter">   
-    </a>
-    <a href="javascript:void(0)" 
-    onClick="window.open('https://plus.google.com/share?url=https%3A%2F%2Fwww.tutorinterventions.co.uk%2F', 'google-plus-share', 'width=490,height=530');return false;"
-     class="fa fa-google"  title="Share on Google+">   
     </a>
     </div>
 </div></body>
