--- a/contact/index.html
+++ b/contact/index.html
@@ -49,6 +49,8 @@
     <link href="/css/styles.css" rel="stylesheet">
     <link href="/css/request-form.css" rel="stylesheet">
     <link href="/css/social-media.css" rel="stylesheet">
+    <link href="/css/slick.css" rel="stylesheet">
+    <link href="/css/slick-theme.css" rel="stylesheet">
      <link href="https://unpkg.com/leaflet@1.4.0/dist/leaflet.css" rel="stylesheet">
  
 <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
@@ -357,7 +359,9 @@
     <script src="/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
     <script src="/js/jqBootstrapValidation.js"></script>
     <script src="/js/request-form.js"></script>
+    <script src="/js/slick.js"></script>
     <script src="/js/main.js"></script>
+
                         <script src="https://unpkg.com/leaflet@1.4.0/dist/leaflet.js"></script>
                     <script src="/js/jqBootstrapValidation.js"></script>
                     <script src="/js/contact_me.js"></script>
@@ -379,7 +383,8 @@
     }
     })});
     </script>
-    <div class="social-media">
+    
+<div class="social-media">
 <div class="sm-container">
     <a href="javascript:void(0)" 
     onClick="window.open('https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fwww.tutorinterventions.co.uk%2F%2Fcontact%2F', 'facebook-share', 'width=580,height=296');return false;"
@@ -388,10 +393,6 @@
     <a href="javascript:void(0)" 
     onClick="window.open('https://twitter.com/intent/tweet?text=Leicester%20Tutor%20With%2020%20Years%20Experience&#38;url=https%3A%2F%2Fwww.tutorinterventions.co.uk%2F%2Fcontact%2F', 'twitter-share', 'width=550,height=235');return false;" 
      class="fa fa-twitter"  title="Share on Twitter">   
-    </a>
-    <a href="javascript:void(0)" 
-    onClick="window.open('https://plus.google.com/share?url=https%3A%2F%2Fwww.tutorinterventions.co.uk%2F%2Fcontact%2F', 'google-plus-share', 'width=490,height=530');return false;"
-     class="fa fa-google"  title="Share on Google+">   
     </a>
     </div>
 </div></body>
