--- a/privacy-policy/index.html
+++ b/privacy-policy/index.html
@@ -49,6 +49,8 @@
     <link href="/css/styles.css" rel="stylesheet">
     <link href="/css/request-form.css" rel="stylesheet">
     <link href="/css/social-media.css" rel="stylesheet">
+    <link href="/css/slick.css" rel="stylesheet">
+    <link href="/css/slick-theme.css" rel="stylesheet">
 
 <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
 <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -299,7 +301,9 @@ We will not sell, distribute or lease your personal information to third parties
     <script src="/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
     <script src="/js/jqBootstrapValidation.js"></script>
     <script src="/js/request-form.js"></script>
+    <script src="/js/slick.js"></script>
     <script src="/js/main.js"></script>
+
      <link rel="stylesheet" type="text/css" href="//cdnjs.cloudflare.com/ajax/libs/cookieconsent2/3.0.3/cookieconsent.min.css" />
     <script src="//cdnjs.cloudflare.com/ajax/libs/cookieconsent2/3.0.3/cookieconsent.min.js"></script>
     <script>
@@ -318,7 +322,8 @@ We will not sell, distribute or lease your personal information to third parties
     }
     })});
     </script>
-    <div class="social-media">
+    
+<div class="social-media">
 <div class="sm-container">
     <a href="javascript:void(0)" 
     onClick="window.open('https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fwww.tutorinterventions.co.uk%2F%2Fprivacy-policy%2F', 'facebook-share', 'width=580,height=296');return false;"
@@ -327,10 +332,6 @@ We will not sell, distribute or lease your personal information to third parties
     <a href="javascript:void(0)" 
     onClick="window.open('https://twitter.com/intent/tweet?text=This%20privacy%20policy%20sets%20out%20how%20Tutor%20Interventions%20uses%20and%20protects%20any%20information%20that%20you%20give%20Tutor%20Interventions%20when%20you%20use%20this%20website.%20Tutor%20Interventions%20is%20committed%20to%20ensuring%20that%20your%20privacy%20is%20protected.%20Should%20we%20ask%20you%20to%20provide%20certain%20information%20by%20which%20you%20can%20be%20identified%20when%20using%20...&#38;url=https%3A%2F%2Fwww.tutorinterventions.co.uk%2F%2Fprivacy-policy%2F', 'twitter-share', 'width=550,height=235');return false;" 
      class="fa fa-twitter"  title="Share on Twitter">   
-    </a>
-    <a href="javascript:void(0)" 
-    onClick="window.open('https://plus.google.com/share?url=https%3A%2F%2Fwww.tutorinterventions.co.uk%2F%2Fprivacy-policy%2F', 'google-plus-share', 'width=490,height=530');return false;"
-     class="fa fa-google"  title="Share on Google+">   
     </a>
     </div>
 </div></body>
