--- a/request-tutor/index.html
+++ b/request-tutor/index.html
@@ -49,6 +49,8 @@
     <link href="/css/styles.css" rel="stylesheet">
     <link href="/css/request-form.css" rel="stylesheet">
     <link href="/css/social-media.css" rel="stylesheet">
+    <link href="/css/slick.css" rel="stylesheet">
+    <link href="/css/slick-theme.css" rel="stylesheet">
 
 <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
 <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -404,7 +406,9 @@
     <script src="/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
     <script src="/js/jqBootstrapValidation.js"></script>
     <script src="/js/request-form.js"></script>
+    <script src="/js/slick.js"></script>
     <script src="/js/main.js"></script>
+
                         <script src="/js/jqBootstrapValidation.js"></script>
                     <script src="/js/tutor_me.js"></script>
              <link rel="stylesheet" type="text/css" href="//cdnjs.cloudflare.com/ajax/libs/cookieconsent2/3.0.3/cookieconsent.min.css" />
@@ -425,7 +429,8 @@
     }
     })});
     </script>
-    <div class="social-media">
+    
+<div class="social-media">
 <div class="sm-container">
     <a href="javascript:void(0)" 
     onClick="window.open('https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fwww.tutorinterventions.co.uk%2F%2Frequest-tutor%2F', 'facebook-share', 'width=580,height=296');return false;"
@@ -434,10 +439,6 @@
     <a href="javascript:void(0)" 
     onClick="window.open('https://twitter.com/intent/tweet?text=Give%20us%20an%20idea%20of%20what%20you%20are%20looking%20for%20and%20we%20will%20get%20back%20to%20you%20very%20shortly%20&#38;url=https%3A%2F%2Fwww.tutorinterventions.co.uk%2F%2Frequest-tutor%2F', 'twitter-share', 'width=550,height=235');return false;" 
      class="fa fa-twitter"  title="Share on Twitter">   
-    </a>
-    <a href="javascript:void(0)" 
-    onClick="window.open('https://plus.google.com/share?url=https%3A%2F%2Fwww.tutorinterventions.co.uk%2F%2Frequest-tutor%2F', 'google-plus-share', 'width=490,height=530');return false;"
-     class="fa fa-google"  title="Share on Google+">   
     </a>
     </div>
 </div></body>
