--- a/terms-and-conditions/index.html
+++ b/terms-and-conditions/index.html
@@ -49,6 +49,8 @@
     <link href="/css/styles.css" rel="stylesheet">
     <link href="/css/request-form.css" rel="stylesheet">
     <link href="/css/social-media.css" rel="stylesheet">
+    <link href="/css/slick.css" rel="stylesheet">
+    <link href="/css/slick-theme.css" rel="stylesheet">
 
 <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
 <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -282,7 +284,9 @@
     <script src="/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
     <script src="/js/jqBootstrapValidation.js"></script>
     <script src="/js/request-form.js"></script>
+    <script src="/js/slick.js"></script>
     <script src="/js/main.js"></script>
+
      <link rel="stylesheet" type="text/css" href="//cdnjs.cloudflare.com/ajax/libs/cookieconsent2/3.0.3/cookieconsent.min.css" />
     <script src="//cdnjs.cloudflare.com/ajax/libs/cookieconsent2/3.0.3/cookieconsent.min.js"></script>
     <script>
@@ -301,7 +305,8 @@
     }
     })});
     </script>
-    <div class="social-media">
+    
+<div class="social-media">
 <div class="sm-container">
     <a href="javascript:void(0)" 
     onClick="window.open('https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fwww.tutorinterventions.co.uk%2F%2Fterms-and-conditions%2F', 'facebook-share', 'width=580,height=296');return false;"
@@ -310,10 +315,6 @@
     <a href="javascript:void(0)" 
     onClick="window.open('https://twitter.com/intent/tweet?text=Welcome%20to%20our%20website.%20If%20you%20continue%20to%20browse%20and%20use%20this%20website%2C%20you%20are%20agreeing%20to%20comply%20with%20and%20be%20bound%20by%20the%20following%20terms%20and%20conditions%20of%20use%2C%20which%20together%20with%20our%20privacy%20policy%20govern%20Tutor%20Interventions%E2%80%99%20relationship%20with%20you%20in%20relation%20to%20this%20website.%20If%20you%20disagree%20...&#38;url=https%3A%2F%2Fwww.tutorinterventions.co.uk%2F%2Fterms-and-conditions%2F', 'twitter-share', 'width=550,height=235');return false;" 
      class="fa fa-twitter"  title="Share on Twitter">   
-    </a>
-    <a href="javascript:void(0)" 
-    onClick="window.open('https://plus.google.com/share?url=https%3A%2F%2Fwww.tutorinterventions.co.uk%2F%2Fterms-and-conditions%2F', 'google-plus-share', 'width=490,height=530');return false;"
-     class="fa fa-google"  title="Share on Google+">   
     </a>
     </div>
 </div></body>
