update social share buttons

--- a/404.html
+++ b/404.html
@@ -317,6 +317,14 @@
     onClick="window.open('https://twitter.com/intent/tweet?text=Sorry%20but%20we%20couldn%26%2339%3Bt%20find%20the%20page%20you%20are%20looking%20for.%20Please%20check%20to%20make%20sure%20you%26%2339%3Bve%20typed%20the%20URL%20correctly.%20%20&#38;url=https%3A%2F%2Fwww.tutorinterventions.co.uk%2F%2F404.md%2F', 'twitter-share', 'width=550,height=235');return false;" 
      class="fa fa-twitter"  title="Share on Twitter">   
     </a>
+     <a href="javascript:void(0)" 
+    onClick="window.open('https://pinterest.com/pin/create/bookmarklet/?media=%2Fimg%2Fclassmates-handsup-header.jpg&#38;url=https%3A%2F%2Fwww.tutorinterventions.co.uk%2F%2F404.md%2F&#38;description=Page%20Not%20Found!', 'pinterest-share');return false;" 
+     class="fa fa-pinterest"  title="Share on Pinterest">   
+    </a>
+      <a href="javascript:void(0)" 
+    onClick="window.open('https://wa.me/?text=Page%20Not%20Found! https%3A%2F%2Fwww.tutorinterventions.co.uk%2F%2F404.md%2F', 'whatsapp-share');return false;" 
+     class="fa fa-whatsapp"  title="Share on WhatsApp">   
+    </a>
     </div>
 </div></body>
 </html>
