--- a/index.html
+++ b/index.html
@@ -447,6 +447,14 @@ My daughter can be difficult to engage/encourage and has low self-esteem, with R
     onClick="window.open('https://twitter.com/intent/tweet?text=Top%20Leicester%20based%20private%20tutor.%20Teacher%20for%20over%2020%20years%20in%20GCSE%20Maths%2C%20English%2C%20SATS%2C%2011%2B.%20Experienced%20with%20those%20struggling%20in%20the%20school%20environment.&#38;url=https%3A%2F%2Fwww.tutorinterventions.co.uk%2F', 'twitter-share', 'width=550,height=235');return false;" 
      class="fa fa-twitter"  title="Share on Twitter">   
     </a>
+     <a href="javascript:void(0)" 
+    onClick="window.open('https://pinterest.com/pin/create/bookmarklet/?media=%2Fimg%2Fclassmates-handsup-header.jpg&#38;url=https%3A%2F%2Fwww.tutorinterventions.co.uk%2F&#38;description=Leicester%20Tutor%20With%2020%20Years%20Teaching%20Experience%20-%20GCSE%20Maths%2C%20English.%20Special%20Needs.', 'pinterest-share');return false;" 
+     class="fa fa-pinterest"  title="Share on Pinterest">   
+    </a>
+      <a href="javascript:void(0)" 
+    onClick="window.open('https://wa.me/?text=Leicester%20Tutor%20With%2020%20Years%20Teaching%20Experience%20-%20GCSE%20Maths%2C%20English.%20Special%20Needs. https%3A%2F%2Fwww.tutorinterventions.co.uk%2F', 'whatsapp-share');return false;" 
+     class="fa fa-whatsapp"  title="Share on WhatsApp">   
+    </a>
     </div>
 </div></body>
 </html>
