--- a/request-tutor/index.html
+++ b/request-tutor/index.html
@@ -440,6 +440,14 @@
     onClick="window.open('https://twitter.com/intent/tweet?text=Give%20us%20an%20idea%20of%20what%20you%20are%20looking%20for%20and%20we%20will%20get%20back%20to%20you%20very%20shortly%20&#38;url=https%3A%2F%2Fwww.tutorinterventions.co.uk%2F%2Frequest-tutor%2F', 'twitter-share', 'width=550,height=235');return false;" 
      class="fa fa-twitter"  title="Share on Twitter">   
     </a>
+     <a href="javascript:void(0)" 
+    onClick="window.open('https://pinterest.com/pin/create/bookmarklet/?media=%2Fimg%2Fclassmates-handsup-header.jpg&#38;url=https%3A%2F%2Fwww.tutorinterventions.co.uk%2F%2Frequest-tutor%2F&#38;description=Request%20Tutor', 'pinterest-share');return false;" 
+     class="fa fa-pinterest"  title="Share on Pinterest">   
+    </a>
+      <a href="javascript:void(0)" 
+    onClick="window.open('https://wa.me/?text=Request%20Tutor https%3A%2F%2Fwww.tutorinterventions.co.uk%2F%2Frequest-tutor%2F', 'whatsapp-share');return false;" 
+     class="fa fa-whatsapp"  title="Share on WhatsApp">   
+    </a>
     </div>
 </div></body>
 </html>
