--- a/about/index.html
+++ b/about/index.html
@@ -380,6 +380,14 @@ My daughter can be difficult to engage/encourage and has low self-esteem, with R
     onClick="window.open('https://twitter.com/intent/tweet?text=Welcome%20to%20Tutor%20Interventions%20in%20Leicester.%20I%E2%80%99m%20Rachael%20Dyer%20and%20I%20set%20up%20Tutor%20Interventions%20to%20provide%20tutoring%20services%20for%20pupils%20in%20and%20around%20the%20Leicester%20area.%20I%20have%20over%2020%20years%20experience%20teaching%20children%20with%20varying%20levels%20of%20Special%20Needs%2C%20including%2C%20but%20not%20limited%20to%3A%20%20Attention%20Deficit%20Hyperactivity%20Disorder%20...&#38;url=https%3A%2F%2Fwww.tutorinterventions.co.uk%2F%2Fabout%2F', 'twitter-share', 'width=550,height=235');return false;" 
      class="fa fa-twitter"  title="Share on Twitter">   
     </a>
+     <a href="javascript:void(0)" 
+    onClick="window.open('https://pinterest.com/pin/create/bookmarklet/?media=%2Fimg%2Fclassmates-handsup-header.jpg&#38;url=https%3A%2F%2Fwww.tutorinterventions.co.uk%2F%2Fabout%2F&#38;description=About%20Us', 'pinterest-share');return false;" 
+     class="fa fa-pinterest"  title="Share on Pinterest">   
+    </a>
+      <a href="javascript:void(0)" 
+    onClick="window.open('https://wa.me/?text=About%20Us https%3A%2F%2Fwww.tutorinterventions.co.uk%2F%2Fabout%2F', 'whatsapp-share');return false;" 
+     class="fa fa-whatsapp"  title="Share on WhatsApp">   
+    </a>
     </div>
 </div></body>
 </html>
