--- a/contact/index.html
+++ b/contact/index.html
@@ -394,6 +394,14 @@
     onClick="window.open('https://twitter.com/intent/tweet?text=Leicester%20Tutor%20With%2020%20Years%20Experience&#38;url=https%3A%2F%2Fwww.tutorinterventions.co.uk%2F%2Fcontact%2F', 'twitter-share', 'width=550,height=235');return false;" 
      class="fa fa-twitter"  title="Share on Twitter">   
     </a>
+     <a href="javascript:void(0)" 
+    onClick="window.open('https://pinterest.com/pin/create/bookmarklet/?media=%2Fimg%2Fclassmates-handsup-header.jpg&#38;url=https%3A%2F%2Fwww.tutorinterventions.co.uk%2F%2Fcontact%2F&#38;description=Contact', 'pinterest-share');return false;" 
+     class="fa fa-pinterest"  title="Share on Pinterest">   
+    </a>
+      <a href="javascript:void(0)" 
+    onClick="window.open('https://wa.me/?text=Contact https%3A%2F%2Fwww.tutorinterventions.co.uk%2F%2Fcontact%2F', 'whatsapp-share');return false;" 
+     class="fa fa-whatsapp"  title="Share on WhatsApp">   
+    </a>
     </div>
 </div></body>
 </html>
