--- a/privacy-policy/index.html
+++ b/privacy-policy/index.html
@@ -333,6 +333,14 @@ We will not sell, distribute or lease your personal information to third parties
     onClick="window.open('https://twitter.com/intent/tweet?text=This%20privacy%20policy%20sets%20out%20how%20Tutor%20Interventions%20uses%20and%20protects%20any%20information%20that%20you%20give%20Tutor%20Interventions%20when%20you%20use%20this%20website.%20Tutor%20Interventions%20is%20committed%20to%20ensuring%20that%20your%20privacy%20is%20protected.%20Should%20we%20ask%20you%20to%20provide%20certain%20information%20by%20which%20you%20can%20be%20identified%20when%20using%20...&#38;url=https%3A%2F%2Fwww.tutorinterventions.co.uk%2F%2Fprivacy-policy%2F', 'twitter-share', 'width=550,height=235');return false;" 
      class="fa fa-twitter"  title="Share on Twitter">   
     </a>
+     <a href="javascript:void(0)" 
+    onClick="window.open('https://pinterest.com/pin/create/bookmarklet/?media=%2Fimg%2Fclassmates-handsup-header.jpg&#38;url=https%3A%2F%2Fwww.tutorinterventions.co.uk%2F%2Fprivacy-policy%2F&#38;description=Privacy%20Policy', 'pinterest-share');return false;" 
+     class="fa fa-pinterest"  title="Share on Pinterest">   
+    </a>
+      <a href="javascript:void(0)" 
+    onClick="window.open('https://wa.me/?text=Privacy%20Policy https%3A%2F%2Fwww.tutorinterventions.co.uk%2F%2Fprivacy-policy%2F', 'whatsapp-share');return false;" 
+     class="fa fa-whatsapp"  title="Share on WhatsApp">   
+    </a>
     </div>
 </div></body>
 </html>
