--- a/terms-and-conditions/index.html
+++ b/terms-and-conditions/index.html
@@ -316,6 +316,14 @@
     onClick="window.open('https://twitter.com/intent/tweet?text=Welcome%20to%20our%20website.%20If%20you%20continue%20to%20browse%20and%20use%20this%20website%2C%20you%20are%20agreeing%20to%20comply%20with%20and%20be%20bound%20by%20the%20following%20terms%20and%20conditions%20of%20use%2C%20which%20together%20with%20our%20privacy%20policy%20govern%20Tutor%20Interventions%E2%80%99%20relationship%20with%20you%20in%20relation%20to%20this%20website.%20If%20you%20disagree%20...&#38;url=https%3A%2F%2Fwww.tutorinterventions.co.uk%2F%2Fterms-and-conditions%2F', 'twitter-share', 'width=550,height=235');return false;" 
      class="fa fa-twitter"  title="Share on Twitter">   
     </a>
+     <a href="javascript:void(0)" 
+    onClick="window.open('https://pinterest.com/pin/create/bookmarklet/?media=%2Fimg%2Fclassmates-handsup-header.jpg&#38;url=https%3A%2F%2Fwww.tutorinterventions.co.uk%2F%2Fterms-and-conditions%2F&#38;description=Terms%20and%20Conditions', 'pinterest-share');return false;" 
+     class="fa fa-pinterest"  title="Share on Pinterest">   
+    </a>
+      <a href="javascript:void(0)" 
+    onClick="window.open('https://wa.me/?text=Terms%20and%20Conditions https%3A%2F%2Fwww.tutorinterventions.co.uk%2F%2Fterms-and-conditions%2F', 'whatsapp-share');return false;" 
+     class="fa fa-whatsapp"  title="Share on WhatsApp">   
+    </a>
     </div>
 </div></body>
 </html>
